log
Mon Mar 15 14:05:44 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   c = a + b;
     ^
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 15 14:06:01 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
8edef57
Mon Mar 15 14:46:12 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
100b6f9
Mon Mar 15 14:46:36 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1bbde13
Mon Mar 15 14:49:38 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
98e538b
Mon Mar 15 14:50:09 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e936c61
Mon Mar 15 15:01:23 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fc8a5db
Mon Mar 15 15:14:20 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
d39c6db
Wed Mar 17 13:54:26 UTC 2021: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
29243b5
Wed Mar 17 14:00:27 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|4
total_score: 30/70
5f162dd
